--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,61 @@
-<app-user-registration></app-user-registration>
+<nav class="container-fluid" id="hide">
+    <div class="navbar navbar-expand-lg navbar-expand-sm navbar-light pb-0 pt-0 pl-0   justify-content-end" id="top-nav">
+      
+      <ul class="navbar-nav">
+          <li class="nav-item">
+            <a id="social" class="nav-link" href="#"><i class="fa fa-instagram" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a id="social" class="nav-link" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a id="social" class="nav-link" href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i> </a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" href="#"><i class="fa fa-phone" aria-hidden="true"><span class="top-login">&nbsp; &nbsp; 1800-123-1800</span></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/signup"><i class="fa fa-user" aria-hidden="true"><span class="top-login">&nbsp; &nbsp; Login&nbsp; |&nbsp; Sign Up</span></i>
+            </a>
+          </li>
+        </ul>
+    </div>
+</nav>
+<header class="container-fluid" id="header">
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#"><img class="brand-logo" src="../../assets/images/unname.png"><span class="fresh">&nbsp; Fresh</span><span class="mart">Martcoop</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse pr-2 justify-content-end mr-5" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active mr-5">
+              <a class="nav-link" href="#" routerLink="">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item mr-5">
+              <a class="nav-link" href="#">Categories&nbsp;<i class="fa fa-caret-down" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li class="nav-item mr-5">
+              <a class="nav-link" href="#">Offer-Zone</a>
+            </li>
+            <li class="nav-item mr-5">
+              <a class="nav-link" href="#">Today's Deals</a>
+            </li>
+            <li class="nav-item mr-5">
+              <a class="nav-link" href="#">Orders</a>
+            </li>
+            <li class="nav-item mr-5">
+              <a class="nav-link" href="#">Cart&nbsp;<i class="fa fa-shopping-cart" aria-hidden="true"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+  
+<router-outlet></router-outlet>
