--- a/src/app/User-List/user-list/user-list.component.html
+++ b/src/app/User-List/user-list/user-list.component.html
@@ -27,9 +27,9 @@
                 <td>{{users.Address}}</td>
                 <td>{{users.PinCode}}</td>
 
-                <a class="ico" href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;&nbsp;</a>
+                <a class="ico" (click)="editUser(users._id)"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;&nbsp;</a>
 
-                <a class="ico" href="#"><i class="fa fa-trash" aria-hidden="true"></i></a>
+                <a class="ico"  (click)="delete(users._id)"><i class="fa fa-trash" aria-hidden="true"></i></a>
               </tr>
             </tbody>
           </table>
