--- a/src/app/User-Registration/user-registration.component.html
+++ b/src/app/User-Registration/user-registration.component.html
@@ -1,103 +1,135 @@
-<mat-card>
-<div class="note">
-        <p >User Registration</p>
-    </div>
-    <mat-card class="text-center">
-        <form (submit)="onAddPost(postForm)" #postForm="ngForm">
-          <mat-form-field>
-            <input
-              matInput
-              type="text"
-              name="userId"
-              [(ngModel)]="userModel.CustomerId"
-              required
-              userId
-              minlength="3"
-              placeholder="User Id"
-              #userId="ngModel">
-            <mat-error *ngIf="userId.invalid">Invalid User Id</mat-error>
-          </mat-form-field>
-          <mat-form-field>
-            <input
-              matInput
-              type="text"
-              name="Fname"
-              [(ngModel)]="userModel.FirstName"
-              required
-              minlength="3"
-              placeholder="First Name"
-              #Fname="ngModel">
-            <mat-error *ngIf="Fname.invalid">Please enter a First Name.</mat-error>
-          </mat-form-field>
-          <mat-form-field>
-            <input
-              matInput
-              name="Lname"
-              [(ngModel)]="userModel.LastName"
-              required
-              Lname
-              minlength="3"
-              placeholder="Last Name"
-              #Lname="ngModel">
-            <mat-error *ngIf="Lname.invalid">Please enter a Last Name.</mat-error>
-          </mat-form-field>
-          <mat-form-field>
-            <input
-              matInput
-              rows="4"
-              name="email"
-              [(ngModel)]="userModel.EmailId"
-              required
-              email
-              placeholder="Email Address"
-              #email="ngModel">
-            <mat-error *ngIf="!email.valid">Please enter a valid Email Address</mat-error>
-          </mat-form-field>
-          <mat-form-field>
-            <input
-              matInput
-              pattern="^\d{10}$"
-              name="Phone"
-              type="tel"
-              Phone
-              maxlength="10"
-              minlength="10"
-              [(ngModel)]="userModel.PhoneNo"
-              required
-              placeholder="Phone No."
-              #Phone="ngModel">
-            <mat-error *ngIf="Phone.invalid">Please enter a Phone Number</mat-error>
-          </mat-form-field>
-          <mat-form-field>
-            <input
-              matInput
-              rows="4"
-              name="Pin"
-              type="number"
-              [(ngModel)]="userModel.PinCode"
-              required
-              placeholder="Pin Code"
-              #Pin="ngModel">
-            <mat-error *ngIf="Pin.invalid">Please enter a Pin Code.</mat-error>
-          </mat-form-field>
-          <mat-form-field>
-            <input
-              matInput
-              name="Address"
-              [(ngModel)]="userModel.Address"
-              required
-              Address
-              placeholder="Address"
-              #Address="ngModel">
-            <mat-error *ngIf="Address.invalid">Please enter an Address</mat-error>
-          </mat-form-field>
-          <button
-            mat-raised-button
-            color="primary"
-            style="margin-top: 20px;"
-            type="submit"
-            >Submit</button>
-        </form>
-      </mat-card>
-    </mat-card>
+
 <!-------------------------------------->
+
+<div class="registration-form">
+  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+    <input type="hidden" name="_id" #_id="ngModel" [(ngModel)]="userModel._id">
+      
+      <div class="form-icon">
+          <span><i class="fa fa-user-o" aria-hidden="true"></i>
+          </span>
+      </div>
+      
+      <div class="form-group">
+        
+          <input type="text"
+
+           class="form-control item" 
+           name="userId"
+           ngModel
+           [(ngModel)]="userModel.CustomerId"
+
+           required
+           userId
+           minlength="3"
+           #userId="ngModel"
+           placeholder="User Id">
+           <div class="alert alert-danger" *ngIf="userId.touched && !userId.valid">Invalid User ID</div>
+      </div>
+      
+      <div class="form-group">
+          <input 
+          type="text"
+          name="Fname"
+          Fname
+          ngModel 
+          [(ngModel)]="userModel.FirstName"
+          required
+          minlength="3"
+          #Fname="ngModel"
+          class="form-control item" 
+          placeholder="First Name">
+          <div class="alert alert-danger" *ngIf="Fname.touched && !Fname.valid">First Name is required.</div>
+      </div>
+      <div class="form-group">
+          <input 
+          type="text"
+          name="Lname"
+          ngModel
+          [(ngModel)]="userModel.LastName"
+          required
+          Lname
+          minlength="3"
+          #Lname="ngModel"
+          class="form-control item"
+          placeholder="Last Name">
+          <div class="alert alert-danger" *ngIf="Lname.touched && !Lname.valid">Last Name is required.</div>
+      </div>
+      <div class="form-group">
+          <input 
+          name="email"
+          ngModel
+          [(ngModel)]="userModel.EmailId"
+          required
+          email
+          #email="ngModel"
+          type="text" 
+          class="form-control item" 
+          placeholder="Email Id">
+          <div class="alert alert-danger" *ngIf="email.touched && !email.valid">Invalid email id.</div>
+      </div>
+      <div class="form-group">
+          <input
+          pattern="^\d{10}$"
+          name="Phone"
+          ngModel
+          [(ngModel)]="userModel.PhoneNo"
+          Phone
+          maxlength="10"
+          minlength="10"
+          required
+          #Phone="ngModel" 
+          type="tel" 
+          class="form-control item" 
+          placeholder="Phone">
+          <div class="alert alert-danger" *ngIf="Phone.touched && !Phone.valid">Invalid Phone number.</div>
+      </div>
+      <div class="form-group">
+        <input 
+        name="Address"
+        ngModel
+        [(ngModel)]="userModel.Address"
+        required
+        Address
+        #Address="ngModel"
+        type="text" 
+        class="form-control item"  
+        placeholder="Address">
+        <div class="alert alert-danger" *ngIf="Address.touched && !Address.valid">Invalid Address.</div>
+    </div>
+    <div class="form-group">
+      <input 
+      rows="4"
+      name="Pin"
+      Pin
+      [(ngModel)]="userModel.PinCode"
+      required
+      #Pin="ngModel"
+      type="text" 
+      class="form-control item" 
+      placeholder="Pin Code">
+      <div class="alert alert-danger" *ngIf="Pin.touched && !Pin.valid">Invalid Pin Code.</div>
+  </div>
+      <div class="form-group">
+          <button type="submit" class="btn btn-block create-account">Submit</button>
+      </div>
+      
+  </form>
+  <div class="social-media">
+      <h5>Sign up with social media</h5>
+      <div class="social-icons">
+          <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>
+          </a>
+          <a href="#"><i class="fa fa-google" aria-hidden="true"></i>
+          </a>
+          <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>
+          </a>
+      </div>
+  </div>
+</div>
+<script>
+  $(document).ready(function(){
+  $('#birth-date').mask('00/00/0000');
+  $('#phone-number').mask('0000-0000');
+ })
+</script>
