--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<nav class="container-fluid" id="hide">
+<body>
+<nav class="container-fluid" style="width: 100%;" id="hide">
     <div class="navbar navbar-expand-lg navbar-expand-sm navbar-light pb-0 pt-0 pl-0   justify-content-end" id="top-nav">
       
       <ul class="navbar-nav">
@@ -26,15 +27,15 @@
     </div>
 </nav>
 <header class="container-fluid" id="header">
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#"><img class="brand-logo" src="../../assets/images/unname.png"><span class="fresh">&nbsp; Fresh</span><span class="mart">Martcoop</span></a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 75px;">
+        <a class="navbar-brand" href="#"><span class="brand-logo">FMC</span>&nbsp; FreshMartCoop</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse pr-2 justify-content-end mr-5" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item active mr-5">
-              <a class="nav-link" href="#" routerLink="">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#" routerLink="home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item mr-5">
               <a class="nav-link" href="#">Categories&nbsp;<i class="fa fa-caret-down" aria-hidden="true"></i>
@@ -47,7 +48,7 @@
               <a class="nav-link" href="#">Today's Deals</a>
             </li>
             <li class="nav-item mr-5">
-              <a class="nav-link" href="#">Orders</a>
+              <a class="nav-link" href="#" routerLink="userlist">User Details</a>
             </li>
             <li class="nav-item mr-5">
               <a class="nav-link" href="#">Cart&nbsp;<i class="fa fa-shopping-cart" aria-hidden="true"></i>
@@ -59,3 +60,4 @@
     </header>
   
 <router-outlet></router-outlet>
+</body>
