--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,112 +1,154 @@
-<section>
-  <div class="container-fluid">
-  <div class="row">
-    <img id="banner-img" src="../../assets/images/depositphotos.jpg">
-  </div>
-  </div>
-  </section>
-  <!------------------CARD------------------------------------------------------------->
+<div id="demo" class="carousel slide" data-ride="carousel">
+
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li data-target="#demo" data-slide-to="0" class="active"></li>
+    <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
+    <li data-target="#demo" data-slide-to="3"></li>
+  </ul>
   
-  <div class="container-fluid">
-  <div class="row">
-  <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
-    <div class="card" id="main-box">
-        <div class="card-block">
-            <div class="meta">
-               <i id="boxes" class="fa fa-smile-o" aria-hidden="true">&nbsp; 100% Satisfaction</i>
-            </div>
-            <div class="card-text">
-                <p style="text-align: center;">Feel free to order</p>
-            </div>
-        </div>
+  <!-- The slideshow -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../../assets/images/lukas-blazek-f-TWhXOrLiU-unsplash.jpg" alt="Los Angeles" width="1100" height="500">
+    </div>
+    <div class="carousel-item">
+      <img src="../../assets/images/peter-wendt--r5KSMkyoSc-unsplash.jpg" alt="Chicago" width="1100" height="500">
+    </div>
+    <div class="carousel-item">
+      <img src="../../assets/images/thanos-pal-Djs02AtkOm4-unsplash.jpg" alt="New York" width="1100" height="500">
+    </div>
+    <div class="carousel-item">
+      <img src="../../assets/images/anna-pelzer-IGfIGP5ONV0-unsplash.jpg" alt="New York" width="1100" height="500">
     </div>
   </div>
   
-  <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
-  <div class="card" id="main-box">
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+</div>
+
+<!---------------Cards--------------------->
+
+<div class="container-fluid">
+  <div class="row justify-content-center">
+    <p class="deal">Todays Deals</p>
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-sm-3">
+          <div class="card">
+              <img class="card-img-top img-fluid" src="../../assets/images/dane-deaner-7woHBtwCgTQ-unsplash.jpg" alt="Card image cap" style="height: 250px;">
+              <div class="card-block">
+                  <h4 class="card-title">Lemons</h4>
+                  <p class="card-text"><small class="text-muted" style="background-color: rgb(192, 250, 181);">43% OFF</small></p>
+              </div>
+          </div>
+      </div>
+      <div class="col-sm-3">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="../../assets/images/dane-deaner-7woHBtwCgTQ-unsplash.jpg" alt="Card image cap" style="height: 250px;">
+            <div class="card-block">
+                <h4 class="card-title">Lemons</h4>
+                <p class="card-text"><small class="text-muted" style="background-color: rgb(192, 250, 181);">43% OFF</small></p>
+            </div>
+          </div>
+          </div>
+      <div class="col-sm-3">
+          <div class="card">
+              <img class="card-img-top img-fluid" src="../../assets/images/sonja-langford-H5k8PoC1BBc-unsplash.jpg" alt="Card image cap" style="height: 250px;">
+              <div class="card-block">
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text"><small class="text-muted" style="background-color: rgb(192, 250, 181);">25% OFF</small></p>
+              </div>
+          </div>
+      </div>
+      <div class="col-sm-3">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="../../assets/images/martin-adams-5XXfyMMan84-unsplash.jpg" alt="Card image cap" style="height: 250px;">
+            <div class="card-block">
+                <h4 class="card-title">Card title</h4>
+                <p class="card-text"><small class="text-muted" style="background-color: rgb(192, 250, 181);">40% OFF</small></p>
+            </div>
+          </div>
+      </div>
+      <div class="col-sm-3">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="../../assets/images/andrey-konstantinov-_wc3qqyhQio-unsplash.jpg" alt="Card image cap" style="height: 250px;">
+            <div class="card-block">
+                <h4 class="card-title">Card title</h4>
+                <p class="card-text"><small class="text-muted" style="background-color: rgb(192, 250, 181);">40% OFF</small></p>
+            </div>
+          </div>
+      </div>
+      <div class="col-sm-3">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="../../assets/images/janine-robinson-JLKz_4NrS7M-unsplash.jpg" alt="Card image cap" style="height: 250px;">
+            <div class="card-block">
+                <h4 class="card-title">Card title</h4>
+                <p class="card-text"><small class="text-muted" style="background-color: rgb(192, 250, 181);">40% OFF</small></p>
+            </div>
+          </div>
+      </div>
+      <div class="col-sm-3">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="../../assets/images/dane-deaner-vlFeZzhlfzw-unsplash.jpg" alt="Card image cap" style="height: 250px;">
+            <div class="card-block">
+                <h4 class="card-title">Card title</h4>
+                <p class="card-text"><small class="text-muted" style="background-color: rgb(192, 250, 181);">40% OFF</small></p>
+            </div>
+          </div>
+      </div>
+      <div class="col-sm-3">
+          <div class="card">
+              <img class="card-img-top img-fluid" src="../../assets/images/mockup-graphics-q9BAy-GGEMs-unsplash.jpg" alt="Card image cap" style="height: 250px;">
+              <div class="card-block">
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text"><small class="text-muted" style="background-color: rgb(192, 250, 181);">40% OFF</small></p>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+
+<!----------------------------------Bank details------------------------------>
+
+<div class="container-fluid">
+  <div class="row justify-content-center">
+    <p class="bank">Bank Offers & Promo Code</p>
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-sm-4">
+          <div class="card">
+              <img class="card-img-top img-fluid" src="../../assets/images/12338.jpg" alt="Card image cap" style="height: 250px;">
+              <div class="card-block">
+              </div>
+          </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card">
+            <img class="card-img-top img-fluid" src="../../assets/images/3781681.jpg" alt="Card image cap" style="height: 250px;">
+            <div class="card-block">
+            </div>
+        </div>
+</div>
+<div class="col-sm-4">
+  <div class="card">
+      <img class="card-img-top img-fluid" src="../../assets/images/3951526.jpg" alt="Card image cap" style="height: 250px;">
       <div class="card-block">
-          <div class="meta">
-            <i id="boxes" class="fa fa-thumbs-o-up" aria-hidden="true">&nbsp; Save 20% when you</i>
-          </div>
-          <div class="card-text">
-              <p style="text-align: center;">use credit card</p>
-          </div>
       </div>
   </div>
-  </div>
-  
-  <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
-  <div class="card" id="main-box">
-    <div class="card-block">
-        <div class="meta">
-          <i id="boxes" class="fa fa-plane" aria-hidden="true">&nbsp;Fast free shipment</i>
-        </div>
-        <div class="card-text">
-            <p style="text-align: center;">On selected merchendise</p>
-        </div>
-    </div>
-  </div>
-  </div>
-  
-  <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
-  <div class="card" id="main-box">
-  <div class="card-block">
-      <div class="meta">
-        <i id="boxes" class="fa fa-retweet" aria-hidden="true">&nbsp; 14 day money back</i>
-      </div>
-      <div class="card-text">
-        <p style="text-align: center;">Guranteed</p>
-      </div>
-  </div>
-  </div>
-  </div>
-  </div>
-  </div>
-  
-  <!-------------------------Footer------------------------------->
-  <footer class="section footer-classic context-light bg-image" style="background: #f4f762a4; margin-top: 20px; box-shadow: 5px 5px 5px 5px grey;">
-  <div class="container">
-  <div class="row row-30">
-    <div class="col-md-4 col-xl-5">
-      <div class="pr-xl-4"><a class="brand" href="#"><img class="brand-logo-light" src="../../assets/images/unname.png" height="50px" width="90px" style="margin-top: 5px;"></a>
-        <p>We are an award-winning creative agency, dedicated to the best result in web design, promotion, business consulting, and marketing.</p>
-        <!-- Rights-->
-        <p class="rights"><span>©  </span><span class="copyright-year">2018</span><span> </span><span>Waves</span><span>. </span><span>All Rights Reserved.</span></p>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <h5>Contacts</h5>
-      <dl class="contact-list">
-        <dt>Address:</dt>
-        <dd>798 South Park Avenue, Jaipur, Raj</dd>
-      </dl>
-      <dl class="contact-list">
-        <dt>email:</dt>
-        <dd><a href="mailto:#">dkstudioin@gmail.com</a></dd>
-      </dl>
-      <dl class="contact-list">
-        <dt>phones:</dt>
-        <dd><a href="tel:#">https://karosearch.com</a> <span>or</span> <a href="tel:#">https://karosearch.com</a>
-        </dd>
-      </dl>
-    </div>
-    <div class="col-md-4 col-xl-3">
-      <h5>Links</h5>
-      <ul class="nav-list">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contacts</a></li>
-        <li><a href="#">Pricing</a></li>
-      </ul>
-    </div>
-  </div>
-  </div>
-  <div class="row no-gutters social-container">
-  <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-facebook"></span><span>Facebook</span></a></div>
-  <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-instagram"></span><span>instagram</span></a></div>
-  <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-twitter"></span><span>twitter</span></a></div>
-  <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-youtube-play"></span><span>google</span></a></div>
-  </div>
-  </footer>
-  
+</div>
+</div>
+
+
